# CatCube

./: .gitignore  CMakeLists.txt  CatCube.sln  launch_launcher.sh  launch_server.sh  launch_studio.sh  supabase_schema.sql
launcher/: Discovery.cs  discovery.js  index.html  main.js  package-lock.json  package.json
maps/: default.lua  physics_test.lua
maps/Crossroads/ServerScriptService/: hud.lua
maps/Crossroads/Workspace/: map.lua
maps/Doomspire/Workspace/: map.lua
maps/HappyHome/Workspace/: map.lua
maps/Hub/ServerScriptService/: minigames.lua
maps/Hub/Workspace/: map.lua
maps/Obby/ServerScriptService/: manager.lua  void_kill.lua
maps/Obby/Workspace/: level.lua
maps/_studio_preview/: map.lua
maps/_studio_preview/Workspace/: map.lua
server/: host_server.sh
shaders/: basic.frag  basic.vert
src/: CharacterHelper.hpp  Engine.cpp  Engine.hpp  Humanoid.cpp  Humanoid.hpp  Instance.cpp  Instance.hpp  LuaBindings.hpp  Model.hpp  NetworkService.cpp  NetworkService.hpp  Part.cpp  Part.hpp  PhysicsService.cpp  PhysicsService.hpp  Renderer.cpp  Renderer.hpp  ScriptService.cpp  ScriptService.hpp  Services.hpp  Shader.cpp  Shader.hpp  main.cpp
src/CatCube.Client/: CatCube.Client.csproj  Game.cs  Program.cs
src/CatCube.Client/Entities/: Player.cs  PlayerPart.cs  RemotePlayer.cs
src/CatCube.Client/Network/: NetworkClient.cs
src/CatCube.Client/World/: Baseplate.cs
src/CatCube.Engine/: CatCube.Engine.csproj
src/CatCube.Engine/DataModel/: DataModel.cs  GuiObject.cs  Instance.cs  Part.cs  SpawnLocation.cs
src/CatCube.Engine/Physics/: PhysicsSpace.cs  ThreadDispatcher.cs
src/CatCube.Engine/Scripting/: LuaVM.cs
src/CatCube.Launcher/: CatCube.Launcher.csproj  Program.cs
src/CatCube.Launcher/Auth/: AuthService.cs  Profile.cs  ProfileService.cs  SupabaseConfig.cs
src/CatCube.Rendering/: Camera.cs  CatCube.Rendering.csproj  InputManager.cs  Mesh.cs  Renderer.cs  Shader.cs
src/CatCube.Server/: CatCube.Server.csproj  Program.cs
src/CatCube.Shared/: CatCube.Shared.csproj  Packets.cs
src/CatCube.Studio/: CatCube.Studio.csproj  Program.cs
